Connector info oplossing

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Outdoor Paradise/dist/README.TXT
 Outdoor Paradise/dist/lib/sqljdbc42.jar
 Outdoor Paradise/nbproject/private/private.properties
 Outdoor Paradise/nbproject/private/private.xml
+/Outdoor Paradise/nbproject/private/
+/Outdoor Paradise/build/
