--- a/Outdoor Paradise/nbproject/project.properties
+++ b/Outdoor Paradise/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.sqljdbc42.jar=C:\\Program Files (x86)\\Microsoft JDBC Driver 4.2 
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.MSSQL_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
