Project property wijziging

--- a/Outdoor Paradise/nbproject/project.properties
+++ b/Outdoor Paradise/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Outdoor Paradise
+application.vendor=Hans
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,16 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Outdoor_Paradise.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.sqljdbc42.jar=C:\\Program Files (x86)\\Microsoft JDBC Driver 4.2 for SQL Server\\sqljdbc_4.2\\enu\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}:\
     ${libs.MSSQL_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
